--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "16.1.1",
     "npx": "^10.2.2",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
